azure preparations
